fix z-index for topnav

--- a/src/App.css
+++ b/src/App.css
@@ -175,6 +175,7 @@ nav > ul {
 
 .topnav {
   display: none;
+  z-index: 2;
 }
 
 .content {
